--- a/css/main.scss
+++ b/css/main.scss
@@ -6,9 +6,9 @@
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$base-font-weight: 400;
+$base-font-family: "Open Sans", Open Sans, sans-serif;
+$base-font-size:   12px;
+$base-font-weight: 300;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
